buttons: Fix alignment issues on some of the buttons (#148)

--- a/public/Buttons/AmanPathan/style.css
+++ b/public/Buttons/AmanPathan/style.css
@@ -1,6 +1,6 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
   }
   body {
     text-align: center;
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(0, 119, 181);
+    height: 100vh;
   }
   .btn-1 {
       color: #000 ;
